# tb-docs

./: .gitignore  README.md  bibliography.bib  cdc.html  cdc.md  cdc.typ  etatdelart.typ
affiche/: text.md
benches/parser-speed/: Cargo.toml  README.md  exo.dy
benches/server-perf/: Cargo.toml  README.md
defense/: README.md  bibliography.yml  defense.typ  demo-chien-du-quartier.md  invitation.md  lastminute.md  screens.md
defense/new/: plx-dy-simple.md  plx-dy-simple.suite.md
pocs/: README.md  test.dy
pocs/lsp-server-demo/: Cargo.toml  demo.fish
pocs/naive-parser/: Cargo.toml  test.dy
pocs/tree-sitter-poc-dy/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
pocs/tree-sitter-poc-dy/bindings/c/: tree-sitter-dy.pc.in
pocs/tree-sitter-poc-dy/bindings/go/: binding.go  binding_test.go
pocs/tree-sitter-poc-dy/bindings/node/: binding.cc  index.js
pocs/tree-sitter-poc-dy/bindings/python/tests/: test_binding.py
pocs/tree-sitter-poc-dy/bindings/python/tree_sitter_dy/: __init__.py  binding.c
pocs/tree-sitter-poc-dy/bindings/rust/: build.rs  lib.rs
pocs/tree-sitter-poc-dy/bindings/swift/TreeSitterDY/: dy.h
pocs/tree-sitter-poc-dy/bindings/swift/TreeSitterDYTests/: TreeSitterDYTests.swift
pocs/tree-sitter-poc-dy/dy/: embedded-md.dy
pocs/tree-sitter-poc-dy/queries/: highlights.scm  injections.scm
pocs/websockets-json/: Cargo.toml  README.md
pocs/winnow-parser/: Cargo.toml
preparation/: cdc.md  descriptif-gaps.md
report/: README.md  bibliography.yml  build.sh  check.fish  main.typ  vars.typ  watch.sh
report/chapters/: arch_impl_server.typ  arch_impl_syntax.typ  architecture.typ  (+9 more)
report/docsgen/: Cargo.toml  README.md
report/docsgen/src/: main.rs
schemas/: base.excalidraw  websocket-json-poc-arch.excalidraw
(+91 files in other folders)
