[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-dy"
description = "A human-writable data format generator"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "dy"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Samuel Roland" }]
requires-python = ">=3.10"
license.text = "All rights reserved"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-dy"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
