[package]
name = "dyngen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
# TODO: fix that
plx = { path = "../../../plx/" }
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.27.1"
# strum_macros = "0.27.1"
walkdir = "2.5.0"
